# database-backup

./: README.md  backuponline.sh  database-nbackup.service  database-nbackup.timer  example.yaml  pyproject.toml
src/database_backup/: __init__.py  main.py
